# ITL.Fastapi.Common.AuditLog

./: README.MD  setup.cfg  setup.py
src/fastapi-auditlog/: middleware.py
