[metadata]
name = fastapi-auditlog
version = 0.1.0
author = Niels Weistra - ITlusions
author_email = n.weistra@itlusions.nl
description = Een FastAPI-middleware voor audit logging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/itlusions/ITL.FastApi.Common.AuditLog
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    fastapi

[options.packages.find]
where = src